Implement data loading and saving with retry logic; add initial JSON files for accounts and transactions

--- a/BankingAppTests/tests.csproj
+++ b/BankingAppTests/tests.csproj
@@ -5,6 +5,8 @@
     <LangVersion>latest</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <VSTestUseMSBuildOutput>false</VSTestUseMSBuildOutput>
+    <RunSettingsFilePath>$(MSBuildProjectDirectory)\test.runsettings</RunSettingsFilePath>
   </PropertyGroup>
 
   <ItemGroup>
